# Thesis_MSCKF

./: CMakeLists.txt  README.md
corelib/include/: CameraModel.h  CoreApp.h  ImageData.h  Odometry.h  OdometryNode.h  SensorData.h
corelib/src/: CoreApp.cpp  CoreNode.cpp  ImageData.cpp  Odometry.cpp  OdometryNode.cpp  SensorData.cpp
